<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorites</string>
    <string name="food_joke">Joke</string>
    <string name="meal_type">Meal Type</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui ut ornare lectus sit amet est placerat in egestas. Sagittis id consectetur purus ut faucibus pulvinar elementum integer enim. Arcu odio ut sem nulla pharetra. Mi quis hendrerit dolor magna eget. Sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Etiam tempor orci eu lobortis elementum nibh tellus. Tristique senectus et netus et malesuada. Fusce id velit ut tortor pretium viverra suspendisse. Eu nisl nunc mi ipsum faucibus vitae. Elementum integer enim neque volutpat ac tincidunt vitae semper quis. Tellus integer feugiat scelerisque varius morbi. Auctor urna nunc id cursus metus aliquam eleifend mi in. Pulvinar elementum integer enim neque volutpat ac tincidunt vitae. Venenatis tellus in metus vulputate.

Eget lorem dolor sed viverra ipsum nunc aliquet. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Volutpat commodo sed egestas egestas. Amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor. Arcu vitae elementum curabitur vitae nunc sed velit dignissim sodales. Odio morbi quis commodo odio aenean sed. Egestas fringilla phasellus faucibus scelerisque. Ultricies mi quis hendrerit dolor magna eget est. Volutpat blandit aliquam etiam erat velit scelerisque. Platea dictumst vestibulum rhoncus est pellentesque. Euismod nisi porta lorem mollis. Tortor dignissim convallis aenean et tortor at.

Nunc non blandit massa enim nec dui. Tortor pretium viverra suspendisse potenti. Turpis massa sed elementum tempus. Potenti nullam ac tortor vitae. Sed risus ultricies tristique nulla aliquet enim. Ac tortor dignissim convallis aenean et tortor at. Elit duis tristique sollicitudin nibh sit amet commodo. Dui sapien eget mi proin sed libero enim. Lacinia at quis risus sed vulputate odio ut enim. Sagittis orci a scelerisque purus semper eget duis at tellus. Volutpat sed cras ornare arcu dui vivamus arcu felis bibendum. Vivamus arcu felis bibendum ut tristique et egestas quis. Egestas integer eget aliquet nibh praesent tristique magna sit amet. Nunc non blandit massa enim nec. Magna sit amet purus gravida quis blandit turpis cursus.

Quis lectus nulla at volutpat diam ut. Est lorem ipsum dolor sit amet. Quis risus sed vulputate odio ut. Nulla aliquet porttitor lacus luctus accumsan tortor posuere ac. Sit amet mattis vulputate enim nulla aliquet porttitor lacus. Pharetra sit amet aliquam id diam maecenas. Sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Pulvinar elementum integer enim neque volutpat. At tellus at urna condimentum mattis pellentesque. In fermentum et sollicitudin ac orci phasellus egestas. In metus vulputate eu scelerisque felis.

Quis ipsum suspendisse ultrices gravida dictum fusce. Bibendum at varius vel pharetra. Maecenas volutpat blandit aliquam etiam erat velit. Purus in massa tempor nec feugiat nisl pretium. Eget mi proin sed libero enim sed faucibus. In iaculis nunc sed augue lacus viverra vitae congue. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt. Dolor sed viverra ipsum nunc. Mauris pharetra et ultrices neque ornare aenean. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae. Eget sit amet tellus cras adipiscing enim. Diam vel quam elementum pulvinar etiam non quam. Viverra adipiscing at in tellus. Egestas dui id ornare arcu odio ut sem nulla pharetra. Tincidunt dui ut ornare lectus. Eget velit aliquet sagittis id consectetur. Mollis aliquam ut porttitor leo a diam sollicitudin. Scelerisque varius morbi enim nunc.

Non enim praesent elementum facilisis leo vel fringilla. Risus viverra adipiscing at in tellus. Integer feugiat scelerisque varius morbi enim. Mauris pharetra et ultrices neque ornare. Ultricies tristique nulla aliquet enim. Ac ut consequat semper viverra. Diam phasellus vestibulum lorem sed risus ultricies tristique. Egestas purus viverra accumsan in nisl. Amet commodo nulla facilisi nullam. Consectetur adipiscing elit ut aliquam. Maecenas sed enim ut sem viverra aliquet eget sit amet. Lectus proin nibh nisl condimentum. Quis blandit turpis cursus in hac habitasse platea. Consequat mauris nunc congue nisi vitae suscipit tellus. Eu mi bibendum neque egestas congue quisque. Dignissim sodales ut eu sem integer vitae justo eget. Arcu odio ut sem nulla pharetra diam sit. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet.

Elit at imperdiet dui accumsan sit. Quis eleifend quam adipiscing vitae. Vel turpis nunc eget lorem dolor sed viverra ipsum. Odio aenean sed adipiscing diam donec. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut. Facilisi etiam dignissim diam quis enim. Etiam tempor orci eu lobortis elementum nibh. Et sollicitudin ac orci phasellus egestas tellus rutrum. Risus at ultrices mi tempus imperdiet nulla malesuada pellentesque. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Libero justo laoreet sit amet cursus sit amet dictum sit.

Mollis aliquam ut porttitor leo a diam. Donec massa sapien faucibus et molestie ac. Interdum velit euismod in pellentesque massa placerat duis. Morbi tincidunt ornare massa eget. Sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Quam lacus suspendisse faucibus interdum. Integer quis auctor elit sed. Adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna neque. Nisl nunc mi ipsum faucibus vitae aliquet. Id porta nibh venenatis cras sed felis eget velit.

Sollicitudin tempor id eu nisl nunc mi ipsum faucibus. Dictum varius duis at consectetur lorem. Nisl tincidunt eget nullam non nisi est sit amet facilisis. Tempus quam pellentesque nec nam aliquam sem. Netus et malesuada fames ac turpis. Ipsum dolor sit amet consectetur adipiscing. Libero nunc consequat interdum varius sit. Ac odio tempor orci dapibus ultrices. Aliquet bibendum enim facilisis gravida neque convallis. Id ornare arcu odio ut. Ac tincidunt vitae semper quis lectus nulla. At risus viverra adipiscing at in. Amet porttitor eget dolor morbi non. Viverra suspendisse potenti nullam ac. Nibh ipsum consequat nisl vel pretium lectus. Feugiat pretium nibh ipsum consequat nisl vel.

Pretium quam vulputate dignissim suspendisse in. Pretium viverra suspendisse potenti nullam ac tortor. Enim tortor at auctor urna nunc. Tellus elementum sagittis vitae et leo duis. Iaculis eu non diam phasellus. Odio pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus. Ac tortor dignissim convallis aenean et tortor. Tincidunt dui ut ornare lectus sit amet est placerat. Habitasse platea dictumst quisque sagittis purus sit amet. Ultrices eros in cursus turpis massa. Nisl pretium fusce id velit. Proin sed libero enim sed faucibus turpis in eu mi. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Habitant morbi tristique senectus et. Mattis molestie a iaculis at erat pellentesque adipiscing.
    </string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="recipe_arg">recipeBundle</string>
    <string name="save_to_favorites">Save To Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string-array name="meal_types">
        <item>Main Course</item>
        <item>Side Dish</item>
        <item>Dessert</item>
        <item>Appetizer</item>
        <item>Salad</item>
        <item>Bread</item>
        <item>Breakfast</item>
        <item>Soup</item>
        <item>Beverage</item>
        <item>Sauce</item>
        <item>Marinade</item>
        <item>Fingerfood</item>
        <item>Snack</item>
        <item>Drink</item>
    </string-array>
    <string-array name="diet_types">
        <item>All</item>
        <item>Gluten Free</item>
        <item>Ketogenic</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Pescetarian</item>
        <item>Paleo</item>
        <item>Primal</item>
        <item>Whole30</item>
    </string-array>
</resources>