<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.recipedetails.OverviewFragment">


    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView" />

    <ImageView
        android:id="@+id/time_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toTopOf="@+id/time_textView"
        app:layout_constraintEnd_toEndOf="@+id/time_textView"
        app:layout_constraintStart_toStartOf="@+id/time_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/like_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/time_textView"
        app:layout_constraintEnd_toStartOf="@+id/time_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toTopOf="@+id/like_textView"
        app:layout_constraintEnd_toEndOf="@+id/like_textView"
        app:layout_constraintStart_toStartOf="@+id/like_textView"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/overviewTitle_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/courgette"
        android:text="Title"
        android:textColor="@color/darkGray"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/vegetarian_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="vegetarianCheck_imageView,vegetarianCheck_textView" />

    <ImageView
        android:id="@+id/vegetarianCheck_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overviewTitle_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/vegetarianCheck_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarianCheck_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarianCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/overviewTitle_textView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/vegan_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="veganCheck_imageView,veganCheck_textView" />

    <ImageView
        android:id="@+id/veganCheck_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetarianCheck_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/veganCheck_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegan"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/veganCheck_imageView"
        app:layout_constraintStart_toEndOf="@+id/veganCheck_imageView"
        app:layout_constraintTop_toTopOf="@+id/veganCheck_imageView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/glutenFree_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="glutenFreeCheck_imageView,glutenFreeCheck_textView" />

    <ImageView
        android:id="@+id/glutenFreeCheck_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@+id/vegetarianCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/overviewTitle_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/glutenFreeCheck_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/glutenFreeCheck_imageView"
        app:layout_constraintStart_toEndOf="@+id/glutenFreeCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/overviewTitle_textView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/dairyFree_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="dairyFreeCheck_imageView,dairyFreeCheck_textView" />

    <ImageView
        android:id="@+id/dairyFreeCheck_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@+id/veganCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/glutenFreeCheck_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/dairyFreeCheck_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dairyFreeCheck_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairyFreeCheck_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairyFreeCheck_imageView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/healthy_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="healthyCheck_textView,healthyCheck_imageView" />

    <ImageView
        android:id="@+id/healthyCheck_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@+id/glutenFreeCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/overviewTitle_textView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/healthyCheck_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/healthy"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/healthyCheck_imageView"
        app:layout_constraintStart_toEndOf="@+id/healthyCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/overviewTitle_textView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cheap_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cheapCheck_textView,cheapCheck_imageView" />

    <ImageView
        android:id="@+id/cheapCheck_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@+id/dairyFreeCheck_imageView"
        app:layout_constraintTop_toBottomOf="@+id/glutenFreeCheck_imageView"
        app:tint="@color/darkGray" />

    <TextView
        android:id="@+id/cheapCheck_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cheap"
        android:textColor="@color/darkGray"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cheapCheck_imageView"
        app:layout_constraintStart_toEndOf="@+id/cheapCheck_imageView"
        app:layout_constraintTop_toTopOf="@+id/cheapCheck_imageView" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dairyFreeCheck_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>